# imagizer

./: CHANGLOG.txt  ConvertIndex.descLatin1ToUTF8.py  EXIF.py  Exiftran.py  LISEZ-MOI.txt  MANIFEST  MANIFEST.in  Makefile  NommeVideo.py  NommeVideo2.py  README.rst  README.txt  TodoList.txt  VideoPlayer.py  bootstrap.py  build-package.sh  config.py  dirchooser.py  generator  imagecache.py  imagizer.conf  imagizer.conf-unix  imagizer.conf-unix-latin1  imagizer.conf-unix-utf8  imagizer.conf-windows  imagizer.py  interface.glade  meson.build  parser.py  pyproject.toml  requirements.txt  selector  selector.glade  setup.py  signals.py  splash.glade  stdeb.cfg  tree.py  warning.glade
CVSROOT/: loginfo
cron.hourly/: photo-web
debian/: changelog  control  copyright  rules
doc/exif/: index.html
doc/exif/private/: EXIF-module.html  EXIF.EXIF_header-class.html  EXIF.IFD_Tag-class.html  EXIF.Ratio-class.html  help.html  indices.html  toc-EXIF-module.html  toc-everything.html  toc.html  trees.html
doc/exif/public/: EXIF-module.html  EXIF.EXIF_header-class.html  EXIF.IFD_Tag-class.html  EXIF.Ratio-class.html  frames.html  help.html  index.html  indices.html  toc-EXIF-module.html  toc-everything.html  toc.html  trees.html
doc/generator/: api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  script-generator-module.html  script-generator.Dir-class.html  script-generator.Entry-class.html  script-generator.FCache-class.html  script-generator.Image-class.html  script-generator.StringStream-class.html  toc-everything.html  toc-script-generator-module.html  toc.html
doc/generator/private/: generator-module.html  generator.AttrFile-class.html  generator.Dir-class.html  generator.Entry-class.html  (+9 more)
doc/html/: api-objects.txt  class-tree.html  help.html  identifier-index.html  imagizer-module.html  imagizer-pysrc.html  imagizer.NommeVideo-module.html  imagizer.NommeVideo-pysrc.html  imagizer.NommeVideo.HTML-class.html  imagizer.NommeVideo.Video-class.html  imagizer.NommeVideo.parser-class.html  imagizer.config'-module.html  imagizer.config'-pysrc.html  imagizer.config'.Config-class.html  imagizer.config-module.html  imagizer.config-pysrc.html  imagizer.config.Config-class.html  imagizer.dirchooser-module.html  imagizer.dirchooser-pysrc.html  imagizer.dirchooser.WarningSc-class.html  imagizer.exiftran-module.html  imagizer.exiftran-pysrc.html  imagizer.exiftran.Exiftran-class.html  imagizer.faces-module.html  imagizer.faces-pysrc.html  imagizer.imagecache-module.html  imagizer.imagecache-pysrc.html  imagizer.imagecache.ImageCache-class.html  imagizer.imagizer-module.html  imagizer.imagizer-pysrc.html  imagizer.imagizer.Controler-class.html  imagizer.imagizer.ControlerX-class.html  imagizer.imagizer.ModelCopySelected-class.html  imagizer.imagizer.ModelProcessSelected-class.html  imagizer.imagizer.ModelRangeTout-class.html  imagizer.imagizer.RawImage-class.html  imagizer.imagizer.View-class.html  imagizer.imagizer.ViewX-class.html  imagizer.imagizer.parser-class.html  imagizer.imagizer.photo-class.html  (+49 more)
doc/selector/: api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  script-selector-module.html  script-selector.AskMediaSize-class.html  script-selector.AskSlideShowSetup-class.html  script-selector.FullScreenInterface-class.html  script-selector.RenameDay-class.html  script-selector.SelectDay-class.html  script-selector.Synchronize-class.html  script-selector.interface-class.html  toc-everything.html  toc.html
grid-RPI-12M/: Calibration.ipynb
grid-RPI-5M/: Port-en-Bessin.ipynb  St_Michel.ipynb  corrections_gpu.ipynb  grid.ipynb  grid_8M.ipynb
gui/: dialog_diaporama.ui  dialog_import.ui  dialog_renommer.ui  dialog_synchro.ui  dialog_tailleCD.ui  dialog_warning.ui  meson.build  principale.ui  search_title.ui  splash.ui
imagizer/: __init__.py  blur.py  config.py  dirchooser.py  encoding.py  exif.py  exiftran.py  fileutils.py  html.py  imagecache.py  imagizer.py  interface.py  parser.py  photo.py  pygtkmplayer.py  qt.py  search_day.py  selection.py  signals.py  utils.py  video.py  video_gui.py  winpath.py
imagizer-src/: __init__.py  _qt.py  blur.py  config.py  curator.py  dialogs.py  dirchooser.py  encoding.py  exif.py  exif2_pyexiv2.py  exif_gexiv2.py  exif_py3exiv2.py  exif_pyexiv2.py  exiftran.py  fileutils.py  fix_comment.py  gtk.py  html.py  imagecache.py  imagemagick.py  imagizer.py  interface.py  meson.build  myqt.py  parser.py  photo.py  pygtkmplayer.py  pyside_dynamic.py  qt.py  search.py  search_day.py  selection.py  signals.py  sqlitedict.py  template.py  tree.py  utils.py  video.py  video_gui.py  winpath.py
imagizer-src/app/: adjust_time.py  generator.py  meson.build  mkdb_sift.py  nomme_video2.py  random_image.py  selector.py
interpolation/: down_sampler.c
libexiftran/: exiftran.c  jpegtools.c  libexif-0.6.16.tar.bz2  libexiftran.c  setup.py
pixmaps/: meson.build
py3exiv2/: CHANGELOG  MANIFEST.in  README  configure.py  py2deb  setup.py
py3exiv2/doc/: make.bat
py3exiv2/src/: exiv2wrapper.cpp  exiv2wrapper.hpp  exiv2wrapper_python.cpp  meson.build
py3exiv2/src/py3exiv2.egg-info/: PKG-INFO  SOURCES.txt
py3exiv2/src/pyexiv2/: __init__.py  exif.py  iptc.py  meson.build  metadata.py  preview.py  utils.py  xmp.py
py3exiv2/test/: pickling.py  readmetadatatestcase.py  xmp.py
pyexiftran/: exiftran.c  exiftran.h  genthumbnail.c  jpegtools.c  meson.build  pyexiftran.c  pyexiftran.html  pyexiftran.pyx  setup.py
screensaver/: imagizer  imagizer_qt  imagizer_qt5
scripts/: Adjust-Time  NommeVideo.py  NommeVideo2.py  extract_image_labels.py  generator  mk_database.py  random_image.py  screensaver  selector
src/: _tree.c  _tree.html  _tree.pyx  down_sampler.c  down_sampler.html  down_sampler.pyx  meson.build
timelaps/: Bidart.ipynb  Deviation.ipynb  Flatfields.ipynb  Mortier.ipynb  Neron.ipynb  StEynard.ipynb  correct_color2.py  correct_color3.py  deflicker.cl  keypoints.py  mkvideo  smooth_move.ipynb  smooth_move2.ipynb
(+59 files in other folders)
