
py.install_sources([
'dialog_diaporama.ui',
'dialog_import.ui',
'dialog_renommer.ui',
'dialog_synchro.ui',
'dialog_tailleCD.ui',
'dialog_warning.ui',
'principale.ui',
'search_title.ui',
'splash.ui',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'imagizer/gui'  # Folder relative to site-packages to install to
)


