subdir('app')

py.install_sources([
'blur.py',
'config.py',
'curator.py',
'dialogs.py',
'dirchooser.py',
'encoding.py',
'exif_gexiv2.py',
'exif.py',
'exif_py3exiv2.py',
'exif_pyexiv2.py',
'exiftran.py',
'fileutils.py',
'fix_comment.py',
'gtk.py',
'html.py',
'imagecache.py',
'imagemagick.py',
'imagizer.py',
'__init__.py',
'interface.py',
'myqt.py',
'parser.py',
'photo.py',
'pygtkmplayer.py',
'_pyqt6.py',
'pyside_dynamic.py',
'_qt.py',
'qt.py',
'search_day.py',
'search.py',
'selection.py',
'sqlitedict.py',
'template.py',
'tree.py',
'utils.py',
'video_gui.py',
'video.py',
'winpath.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'imagizer'  # Folder relative to site-packages to install to
)

