py.install_sources(['colors.png',
'contrast.png',
'down.png',
'exit.png',
'gimp.png',
'gnome_mplayer_logo.png',
'help.png',
'image-editor.png',
'left.png',
'logo.png',
'next.png',
'previous.png',
'reload.png',
'right.png',
'rt-logo.png',
'selector_logo2.png',
'signature.png',
'Splash.png',
'system.png',
'trash.png',
'warning.png',],
  pure: false,   # Will be installed next to binaries
  subdir: 'imagizer/pixmaps'  # Folder relative to site-packages to install to
)