py.install_sources([
'selector.py',
'random_image.py',
'adjust_time.py',
'extract_image_labels.py',
'generator.py',
'mk_database.py',
'mkdb_sift.py',
'nomme_video.py',
'nomme_video2.py',

],
  pure: false,    # Will be installed next to binaries
  subdir: 'imagizer/app'  # Folder relative to site-packages to install to
)